# Artificial-Intelligence-New-Drug-Development-Competition

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  harness.yaml  pyproject.toml  validation-report.md
05_리서치/: 2026-07-06_H2L-Forge_deep_research_report.md  2026-07-16_H2L-Forge_냉정평가_및_개선안.md
docs/: 00_source-log.md  01_business-model.md  01_competition_analysis.md  01_meeting-log.md  02_cps.md  02_field1_field2_fusion_design.md  03_principles.md  03_proposal_outline.md  04_definitions.md  04_sources.md  05_domain-model.md  05_work_plan.md  06_prd.md  06_score_improvement_research.md  07_agent_loop_architecture.md  07_architecture.md  08_feature-spec.md  08_molecular_optimization_loop.md  09_flow.md  10_eval-plan.md  11_change-log.md  12_handoff.md  13_competition-readiness-assessment.md  harness-migration-map.md
evals/: cases.jsonl  decision_cases.json  failure-modes.md  golden-cases.md  rubric.md
prompts/: agent_system_prompt.md
rules/: agent-rules.md  compliance-rules.md  data-rules.md  import-export-rules.md  naming-rules.md  ui-rules.md
src/h2l/: __init__.py  cli.py  console_store.py  eval_runner.py  molopt.py  molopt_eval.py  registry.py  replay.py  server.py  state_machine.py  tools.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_cli.py  test_console_store.py  test_eval_runner.py  test_molopt.py  test_offline_replay.py  test_registry.py  test_server.py  test_state_machine.py
web/: README.md  index.html
web/scripts/: qa.mjs
web/src/: App.tsx  rdkit.d.ts  styles.css
web_dongseop/: README.md  package-lock.json  package.json
(+59 files in other folders)
